# Metal_Sandbox

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Core/: CMakeLists.txt
Core/include/core/: allocators.hpp  containers.hpp  core.hpp  log.hpp  random.hpp
Core/src/: log.cpp
Shaders/: compile.sh
Shaders/ir/: shader.ir  skybox.ir
Shaders/src/: shader.metal  skybox.metal  terrainMeshShader.metal
include/gal/: gal.hpp
src/: Terrain.h  camera.h  cube.hpp  metalapp.mm
src/Resources/: Texture.h  argumentTable.h  buffer.h  checkResource.h  command.h  depthStencileState.h  mtlLibrary.h  pipelineState.h  residencySet.h
stb_image/: CMakeLists.txt
stb_image/include/stb/: stb_image.h
tinyExr/: exr_reader.hh  streamreader.hh  tinyexr-implementation.cpp  tinyexr.h
window-manager/: CMakeLists.txt  README.md
window-manager/docs/: windowmgr-api-ref.md  windowmgr-examples.md  windowmgr-readme.md
window-manager/docs/.obsidian/: workspace.json
window-manager/include/wm/: window-manager.h
window-manager/src/: Result.hpp
window-manager/src/linux-implementation/: keycodes.h  window-slots.cpp  window-slots.h  x11-window-wrapper.cpp
window-manager/src/linux-implementation/atom/: atom-handler.cpp  atom-handler.h
window-manager/src/linux-implementation/cursor/: cursor.cpp  cursor.h
window-manager/src/linux-implementation/error-handler/: error-handler.cpp  error-handler.h
window-manager/src/mac-os-implementation/: keycodes.h  window-wrapper.mm
window-manager/src/mac-os-implementation/tools/: slots.h
